# CChess

./: .gitignore  CChess.c  CMakeLists.txt  LICENSE  README.md
apps/: CChess.c  CMakeLists.txt
docs/: CMakeLists.txt
include/: Screen.h  TableMouseController.h  UiComponent.h  mouseControl.h  mouseController.h  objectSurfaces.h  objectTextures.h  screen.h  sdlSurfaces.h  sdlTextures.h  vector.h
include/ChessEngine/: piece.h  team.h
include/project/: piece.h  table.h  team.h  testingStructure.h
lib/: CMakeLists.txt
lib/ChessEngine/: CMakeLists.txt  chessStructure.h
lib/ChessEngine/Structural/include/: kingMoveValidator.h  move.h  table.h  team.h
lib/ChessEngine/Structural/src/: piece.c  table.c  team.c
lib/ChessEngine/include/: move.h  piece.h  pieceRules.h  table.h  team.h
lib/ChessEngine/src/: kingMoveValidator.c  move.c  piece.c  pieceRules.c  table.c  team.c
src/: CMakeLists.txt  Screen.c  TableMouseController.c  UiComponent.c  mouseControl.c  mouseController.c  objectSurfaces.c  objectTextures.c  piece.c  screen.c  sdlSurfaces.c  sdlTextures.c  table.c  team.c  testingStructure.c  vector.c
src/ChessEngine/: piece.c  team.c
